# dovecot-ceph-plugin

./: .autotools  .clang-format  .cproject  .gitignore  .gitmodules  .project  .sudo.swp  .travis.yml  .travis.yml_old  AUTHORS  CHANGELOG.md  COPYING  CPPLINT.cfg  ChangeLog  HISTORY  LICENSE  Makefile.am  README.md  build.sh  configure.ac  doxygen.conf  make_dist.sh  setup_test_env.sh  test.adoc
.github/ISSUE_TEMPLATE/: bug_report.md
.github/scripts/: build_script.sh  run_tests.sh  run_unit_tests.sh
.github/workflows/: build.yml  build_run_tests.yml
doc/: dovecot-ceph-hybrid-libindex-rmb-cache.puml  dtag411w-email-ceph-design.adoc  email-ceph-proposal.adoc  imaptest.adoc  lda-rados.puml  lda-rbox.puml  librmb-dovecot.puml  librmb-stack.puml  profile-pop3.conf
docker/: docker-compose.yml
docs/: home.md  index.md
lib/: Makefile.am
lib/gtest/: Makefile.am
m4/: ax_compiler_flags.m4  ax_compiler_flags_cflags.m4  ax_compiler_flags_cxxflags.m4  ax_valgrind_check.m4  dovecot.m4
packaging/rpm/: dovecot22-rados.spec
rpm/: dovecot-ceph-plugin-rpmlintrc  dovecot-ceph-plugin.spec  dovecot22-rados.spec  tallence-dovecot-ceph.rpm
src/: DictRados.cpp  DictRados.h  DictRados.hpp  Makefile.am  librados-plugin.c  librados-plugin.h  test-rados.c
src/dict-rados/: .gitignore  DictRados.cpp  DictRados.h  DictRados.hpp  Makefile.am  ceph.client.admin.keyring  dict-rados.cpp  dict-rados.h  dovecot-dict.h  imap.txt  libdict-rados-plugin.c  libdict-rados-plugin.h  rados-cluster.cpp  rados-cluster.h  rados-dictionary.cpp  rados-dictionary.h  test-dict-rados.c
src/librmb/: Makefile.am  RadosMailObject.cpp  RadosMailObject.h  encoding.h  rados-ceph-config.cpp  rados-ceph-config.h  rados-ceph-json-config.cpp  rados-ceph-json-config.h  rados-cluster-impl.cpp  rados-cluster-impl.h  rados-cluster.cpp  rados-cluster.h  rados-config.cpp  rados-config.h  rados-dictionary-impl.cpp  rados-dictionary-impl.h  rados-dictionary.cpp  rados-dictionary.h  rados-dovecot-ceph-cfg-impl.cpp  rados-dovecot-ceph-cfg-impl.h  rados-dovecot-ceph-cfg.h  rados-dovecot-config.cpp  rados-dovecot-config.h  rados-guid-generator.h  rados-mail-object.cpp  rados-mail-object.h  rados-mail.cpp  rados-mail.h  rados-metadata-storage-default.cpp  rados-metadata-storage-default.h  rados-metadata-storage-ima.cpp  rados-metadata-storage-ima.h  rados-metadata-storage-impl.h  rados-metadata-storage-module.h  rados-metadata-storage.h  rados-metadata.h  rados-namespace-manager.cpp  rados-namespace-manager.h  rados-save-log.cpp  rados-save-log.h  (+7 more)
src/librmb/interfaces/: rados-cluster-interface.h  rados-dictionary-interface.h  rados-storage-interface.h
src/librmb/tools/: Makefile.am  rbox_list_objects.cpp  rbox_list_objects.h
src/librmb/tools/rmb/: .gitignore  Makefile.am  ls_cmd_parser.cpp  ls_cmd_parser.h  mailbox_tools.cpp  mailbox_tools.h  rados-mail-box.h  rmb-commands.cpp  rmb-commands.h  rmb.cpp  rmb.h  rmb.man
src/scripts/: delete_user.sh  doveadm.sh  move_to_mdbox.sh  move_to_rbox.sh  move_to_rbox_and_check.sh  sort.sh  test_funcs.sh  utils.sh
src/storage-rados/: Makefile.am  RadosMailObject.cpp  RadosMailObject.h  ceph.conf  debug-helper.c  debug-helper.h  libstorage-rados-plugin.c  libstorage-rados-plugin.h  rados-copy.cpp  rados-copy.h  rados-mail.c  rados-mail.cpp  rados-mail.h  rados-save.c  rados-save.cpp  rados-save.h  rados-storage-local.h  rados-storage-struct.h  rados-storage.c  rados-storage.cpp  rados-storage.h  rados-sync.c  rados-sync.cpp  rados-sync.h  test-debug-helper.c  typeof-def.h
src/storage-rbox/: Makefile.am  RadosBox.cpp  RadosBox.h  RadosBox.hpp  debug-helper.c  debug-helper.h  doveadm-rbox-plugin.cpp  doveadm-rbox-plugin.h  doveadm-rbox.c  dovecot-all.h  istream-bufferlist.cpp  istream-bufferlist.h  libstorage-rbox-plugin.c  libstorage-rbox-plugin.h  ostream-bufferlist.cpp  ostream-bufferlist.h  rados-storage.cpp  rados-storage.h  rbox-copy.c  rbox-copy.cpp  rbox-copy.h  rbox-file.c  rbox-file.cpp  rbox-file.h  rbox-mail.c  rbox-mail.cpp  rbox-mail.h  rbox-mailbox-list-fs.cpp  rbox-mailbox-list-fs.h  rbox-save.c  rbox-save.cpp  rbox-save.h  rbox-storage-local.h  rbox-storage-struct.h  rbox-storage.c  rbox-storage.cpp  rbox-storage.h  rbox-storage.hpp  rbox-sync-rebuild.c  rbox-sync-rebuild.cpp  (+6 more)
src/tests/: .gitignore  Makefile.am  dict_rados.supp  dovecot.supp  it_test_check_metadata  it_test_storage_rbox_2  librmb_test.cpp  open_connection.supp  storage_mock_rbox.supp  test_repair_rbox  test_storage_mock_rbox_bugs
src/tests/backup/: TestCase.cpp  TestCase.h  it_test_backup_rbox.cpp
src/tests/dict-rados/: TestCase.cpp  TestCase.h  dict_rados_test.cpp  it_test_dict_rados.cpp
src/tests/doveadm-rmb/: TestCase.cpp  TestCase.h  it_test_doveadm_rmb.cpp
src/tests/librmb/: it_test_librmb.cpp  librmb_test.cpp  test_librmb_utils.cpp
src/tests/mocks/: mock_test.h
src/tests/rmb/: rmb_test.cpp  test_rmb.cpp
src/tests/storage-mock-rbox/: TestCase.cpp  TestCase.h  storage_mock_rbox_test.cpp  test_repair_rbox.cpp  test_storage_mock_rbox.cpp  test_storage_mock_rbox_bugs.cpp
src/tests/storage-mock-rbox/testdata/: gzip_invalid_trailer.mail  gzip_valid_trailer.mail
src/tests/storage-rbox/: TestCase.cpp  TestCase.h  it_test_check_metadata.cpp  it_test_copy_rbox.cpp  it_test_copy_rbox_alt.cpp  it_test_copy_rbox_fail.cpp  it_test_doveadm_backup_rbox.cpp  it_test_lda_rbox.cpp  it_test_move_rbox.cpp  it_test_move_rbox_alt.cpp  it_test_read_mail_failed_rbox.cpp  it_test_read_mail_rbox.cpp  it_test_read_mail_rbox_alt.cpp  it_test_storage_rbox.cpp  storage_rbox_test.cpp
src/tests/storage-rbox2/: TestCase.cpp  TestCase.h
src/tests/sync-rbox/: TestCase.cpp  TestCase.h  it_test_sync_rbox.cpp  it_test_sync_rbox_2.cpp  it_test_sync_rbox_alt.cpp  it_test_sync_rbox_duplicate_uid.cpp
src/tests/test-utils/: it_utils.cpp  it_utils.h
